<resources>
    <string name="app_name">Netflix</string>
    <string name="user_name">User Name : </string>
    <string name="password">Password : </string>
    <string name="login">Login</string>
    <string name="etx_name">Name</string>
    <string name="logo_netflix">logo netflix</string>
    <string name="etx_password">Password</string>
    <string name="hit_password">Password</string>
    <string name="hit_repassword">Re Password</string>
    <string name="username">Username</string>
    <string name="phone">Phome</string>
    <string name="email">E-Mail</string>
</resources>
